--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable", "es6", "dom"],
     "noImplicitAny": true,
     "noImplicitThis": true,
+    "types": ["vite-plugin-svgr/client"],
     "strictNullChecks": true,
     "module": "ESNext",
     "skipLibCheck": true,
