--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^5.13.6",
     "@mui/types": "^7.2.4",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.14.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
+    "@types/react-big-calendar": "^1.6.4",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
